Fixed bug where side nav bar would shift to the left after clicking a section button

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ a {
 #side-nav{
     position: sticky;
     top: 0;
+    left: 0;
     align-self:flex-start;
 
     height: 100vh;
